update fx-report for 202112

--- a/src/pages/fx-reports/index.mdx
+++ b/src/pages/fx-reports/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: FX投機 ほうれんそう。ジャリンジャリン稼ぐぜ!
 path: /fx-reports
-date: 2021-11-13
+date: 2021-12-25
 ---
 
 import Image from "../../components/image";
@@ -36,9 +36,15 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 
 ## 月次成績
 
+### 2021-12
+
+<FxMonthlyReport month="2021/12" bars={["profit", "pips" ]} aggregate="daily"/>
+
+<FxSummaryView  month="2021/12" />
+
 ### 2021-11
 
-<FxMonthlyReport month="2021/11" bars={["profit", "pips" ]} aggregate="daily"/>
+<FxMonthlyReport month="2021/11" bars={["profit", "pips" ]} aggregate="weekly"/>
 
 <FxSummaryView  month="2021/11" />
 
