--- a/src/pages/fx-reports/index.mdx
+++ b/src/pages/fx-reports/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: FX投機 ほうれんそう。ジャリンジャリン稼ぐぜ!
 path: /fx-reports
-date: 2022-01-30
+date: 2022-02-19
 ---
 
 import Image from "../../components/image";
@@ -33,9 +33,16 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 
 ## 月次成績
 
+### 2022-02
+
+<FxMonthlyReport month="2022/02" bars={["profit", "pips" ]} aggregate="daily"/>
+
+<FxSummaryView  month="2022/02" />
+
+
 ### 2022-01
 
-<FxMonthlyReport month="2022/01" bars={["profit", "pips" ]} aggregate="daily"/>
+<FxMonthlyReport month="2022/01" bars={["profit", "pips" ]} aggregate="weekly"/>
 
 <FxSummaryView  month="2022/01" />
 
