--- a/src/pages/fx-reports/index.mdx
+++ b/src/pages/fx-reports/index.mdx
@@ -51,6 +51,12 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 
 <FxSummaryView  month="2022/01" />
 
+### 2021-12
+
+<FxMonthlyReport month="2021/12" bars={["profit", "pips" ]} aggregate="weekly"/>
+
+<FxSummaryView  month="2021/12" />
+
 ### 2021-11
 
 <FxMonthlyReport month="2021/11" bars={["profit", "pips" ]} aggregate="weekly"/>
