replace GatsbyImage using next/image

--- a/src/pages/fx-reports/index.mdx
+++ b/src/pages/fx-reports/index.mdx
@@ -1,15 +1,12 @@
-# TODO: replace using nextjs component or plain html component
 ---
 title: FX投機 ほうれんそう。ジャリンジャリン稼ぐぜ!
 path: /fx-reports
 date: 2022-03-28
 ---
 
-# TODO: replace using nextjs component or plain html component
-import Image from "../../components/image";
+import FxImage20210130 from "../../components/image";
 import FxMonthlyReport from "../../components/fx-reports/fx-monthly-report";
 import FxAnnualReport from "../../components/fx-reports/fx-annual-report";
-# TODO: replace using nextjs component or plain html component
 import FxReviewImage20210203 from "../../components/fx-reports/fx-review-image20210203";
 import FxPriceLotCheetSheet from "../../components/fx-reports/fx-price-lot-cheetsheet";
 import FxSummaryView from "../../components/fx-reports/fx-summary-view";
@@ -309,7 +306,6 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
   * 2月1日の上昇トレンドの転換を感知できず・受け入れもできず売りを入れては損失を出す
     * 利益目標を建てて初日で出鼻をくじかれた。
 
-# TODO: replace using nextjs component or plain html component
 <FxReviewImage20210203 />
 
 * 主なイベント
@@ -348,8 +344,7 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 
 * 当面400万での運用を継続します。余剰利益39万を証券口座に振替済
 
-# TODO: replace using nextjs component or plain html component
-<Image />
+<FxImage20210130 />
 
 * 振り返り。
   * 稼げると満足して休んでしまう-> 1月4周目は毎日実践できていた
