uoading transaction csv on build using getStaticProps

--- a/src/pages/fx-reports/index.mdx
+++ b/src/pages/fx-reports/index.mdx
@@ -10,6 +10,14 @@ import FxAnnualReport from "../../components/fx-reports/fx-annual-report";
 import FxReviewImage20210203 from "../../components/fx-reports/fx-review-image20210203";
 import FxPriceLotCheetSheet from "../../components/fx-reports/fx-price-lot-cheetsheet";
 import FxSummaryView from "../../components/fx-reports/fx-summary-view";
+import loadFxTransactionsAll from "../../models/fx-reports/fx-transaction-csv-loader";
+import { FxTransactionsData } from "../../types";
+
+export function getStaticProps({ params }: any) {
+  const data: FxTransactionsData = loadFxTransactionsAll();
+
+  return { props: { data } };
+}
 
 ## ABOUT
 
@@ -29,81 +37,81 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 
 `この金でどうだ..!`
 
-<FxAnnualReport year="2022" dream={3600000} >一年間の利益(成績)をグラフにまとめました</FxAnnualReport>
+<FxAnnualReport data={this.props.data} year="2022" dream={3600000} >一年間の利益(成績)をグラフにまとめました</FxAnnualReport>
 
 ## 月次成績
 
 ### 2022-03
 
-<FxMonthlyReport month="2022/03" bars={["profit", "pips" ]} aggregate="daily"/>
+<FxMonthlyReport data={this.props.data} month="2022/03" bars={["profit", "pips" ]} aggregate="daily"/>
 
-<FxSummaryView  month="2022/03" />
+<FxSummaryView data={this.props.data}  month="2022/03" />
 
 ### 2022-02
 
-<FxMonthlyReport month="2022/02" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2022/02" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2022/02" />
+<FxSummaryView data={this.props.data}  month="2022/02" />
 
 ### 2022-01
 
-<FxMonthlyReport month="2022/01" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2022/01" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2022/01" />
+<FxSummaryView data={this.props.data}  month="2022/01" />
 
 ### 2021-12
 
-<FxMonthlyReport month="2021/12" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/12" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/12" />
+<FxSummaryView data={this.props.data}  month="2021/12" />
 
 ### 2021-11
 
-<FxMonthlyReport month="2021/11" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/11" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/11" />
+<FxSummaryView data={this.props.data}  month="2021/11" />
 
 ### 2021-10
 
-<FxMonthlyReport month="2021/10" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/10" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/10" />
+<FxSummaryView data={this.props.data}  month="2021/10" />
 
 ### 2021-09
 
-<FxMonthlyReport month="2021/09" bars={["profit", "pips" ]} aggregate="daily"/>
+<FxMonthlyReport data={this.props.data} month="2021/09" bars={["profit", "pips" ]} aggregate="daily"/>
 
-<FxSummaryView  month="2021/09" />
+<FxSummaryView data={this.props.data}  month="2021/09" />
 
 ### 2021-08
 
-<FxMonthlyReport month="2021/08" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/08" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/08" />
+<FxSummaryView data={this.props.data}  month="2021/08" />
 
 ### 2021-07
 
-<FxMonthlyReport month="2021/07" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/07" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/07" />
+<FxSummaryView data={this.props.data}  month="2021/07" />
 
 ### 2021-06
 
-<FxMonthlyReport month="2021/06" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/06" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/06" />
+<FxSummaryView data={this.props.data}  month="2021/06" />
 
 ### 2021-05
 
-<FxMonthlyReport month="2021/05" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/05" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/05" />
+<FxSummaryView data={this.props.data}  month="2021/05" />
 
 ### 2021-04
 
-<FxMonthlyReport month="2021/04" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/04" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/04" />
+<FxSummaryView data={this.props.data}  month="2021/04" />
 
 * 検討
   * 損切り戦略
@@ -232,9 +240,9 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 * 3月2周目終了時点で 60万円の収支プラス。通年168万円の収支プラス。
 * 評価損益が-400万円。元金 月初1066万 -> 1126万 / 買い建15 / 売り建90
 
-<FxMonthlyReport month="2021/03" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/03" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/03" />
+<FxSummaryView data={this.props.data}  month="2021/03" />
 
 * 振り返り
   * 3月は大きなトレンドに乗って前半に50万を超える利益を得た。
@@ -298,9 +306,9 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 * 評価損益が-270万円。元金 月初400万 -> 1066万 / 買い建30 / 売り建109
 * 警戒: 米金利上昇、株式市場バブル崩壊.. 急なドル高(相対的円安)によるロスカット・塩漬け注意
 
-<FxMonthlyReport month="2021/02" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/02" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/02" />
+<FxSummaryView data={this.props.data}  month="2021/02" />
 
 * 振り返り
   * 2月1日の上昇トレンドの転換を感知できず・受け入れもできず売りを入れては損失を出す
@@ -338,9 +346,9 @@ import FxSummaryView from "../../components/fx-reports/fx-summary-view";
 * 1月末時点で、52万円の収支プラス。通年52万円の収支プラス。
 * 元金 月初384万 -> 400万 / 買い建30 / 売り建 50
 
-<FxMonthlyReport month="2021/01" bars={["profit", "pips" ]} aggregate="weekly"/>
+<FxMonthlyReport data={this.props.data} month="2021/01" bars={["profit", "pips" ]} aggregate="weekly"/>
 
-<FxSummaryView  month="2021/01" />
+<FxSummaryView data={this.props.data}  month="2021/01" />
 
 * 当面400万での運用を継続します。余剰利益39万を証券口座に振替済
 
